@@ -1,3 +1,9 @@
+2019-10-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/cpp2a/constexpr-dtor3.C: Expect in 'constexpr' expansion of
+	message on the line with variable declaration.
+	* g++.dg/ext/constexpr-attr-cleanup1.C: Likewise.
+
 2019-10-23  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/execute/20191023-1.c: New test.
