@@ -1,3 +1,8 @@
+2019-10-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* constexpr.c (cxx_eval_constant_expression) <case CLEANUP_STMT>:
+	Temporarily change input_location to CLEANUP_STMT location.
+
 2019-10-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/85887
